Update hero section description in index.html

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <section id="home" class="hero">
         <div class="container">
             <h1>Your Name</h1>
-            <p>Web Developer | Designer | Creative Professional</p>
+            <p>Robotics Engineer | Programmer | Creative Thinker</p>
         </div>
     </section>
 
