Update hero section with name change

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Shivansh Pratap Singh</h1>
             <p>Robotics Engineer | Programmer | Creative Thinker</p>
         </div>
     </section>
